2009-07-01
Worked on WMP template
Commented users.php plugin

2009-06-27
Converted most admin plugins to use the template system

2009-06-26
Created an xml api compatible with ampache, amarok can now connect to the media server using the same ampache plugin

2009-06-21
Worked on users.php plugin, laid out the design for all types of user management
Started WMP template, modeled after the new Windows Media Player for Windows 7

2009-04-18
Worked on live template, right click menu
Cron doesn't run if it is already running, so only one instance is working at a time

2009-04-16
Worked on live template, got drag selecting working

2009-04-16
Worked on reports.php plugin, file renaming working fairly well
Added lock detection to cron.php script, now if the log is locked it will exit the script, so they don't overlap

2009-04-14
Worked on default template
Worked on reports

2009-04-10
Plugins not include pages that contain template information if the extension of the template is a .php
Smarty system is now a GLOBAL that is setup in common
Added some comments in the code

2009-04-09
Worked on encoding presets in the encode.php plugin
Added constants for disabling modules

2009-04-08
Fixed a bad error with db_archive and db_diskimage module, the Filepath was being passed to the db_ids modules with the addslashes before, so slashes were added twice
Fixed an error with db_ids module, if an ID wasn't in the array it overwrote the entire id array so it then rechecked every id
	Doesn't check for IDs in watch, watch_list, alias, and itself now
Worked on speed issues for cron.php script
Limit all select calls that include Filepath = "" by 1 because filepaths are unique

2009-04-07
Added the db_ids results to the file requests in plugins, this is so modules can try to be more efficient then just looking up filepaths
	Changed modules to use int ids, bigint is unnessicary and cost twice as much time, it is unlikely that anyone will load more then 2 billion files into the database