@@ -4,6 +4,10 @@
 
 require_once dirname(__FILE__) . DIRECTORY_SEPARATOR . '..' . DIRECTORY_SEPARATOR . 'include' . DIRECTORY_SEPARATOR . 'common.php';
 
+// Variables Used:
+//  reports
+// Shared Variables:
+
 // how many directories still to search
 // how many files added in the last 24 hours
 // load multiple log files
@@ -591,40 +595,16 @@ foreach($reports as $section => $report)
 	ksort($reports[$section], SORT_NUMERIC);
 }
 
-?>
-<html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="-1">
-	<title><?php echo HTML_NAME?>: Reports</title>
-</head>
-<body>
-	View different types of reports by selecting the link and following the instructions.<br />
-	<?php
-	foreach($reports as $section => $report)
+// show template
+if(realpath($_SERVER['SCRIPT_FILENAME']) == __FILE__)
+{
+	if(getExt($GLOBALS['templates']['TEMPLATE_REPORTS']) == 'php')
+		@include $GLOBALS['templates']['TEMPLATE_REPORTS'];
+	else
 	{
-		foreach($report as $order => $lines)
-		{
-			foreach($lines as $key => $line)
-			{
-				$type = intval(substr($key, 0, strpos($key, '-')));
-				$title = substr($key, strpos($key, '-')+1);
-				if(!isset($previous_section)) $previous_section = $section;
-				if((isset($_REQUEST['show'.$section]) && $_REQUEST['show'.$section] == true) || ($type & TYPE_HEADING) > 0 || $section < 0)
-				{
-					if(($type & TYPE_HEADING) > 0)
-					{
-						print '<br /><span style="font-weight:bold;' . 'color:rgb(' . ((($type&TYPE_R)>0)?'255,':'0,') . ((($type&TYPE_G)>0)?'255,':'0,') . ((($type&TYPE_B)>0)?'255':'0') . ');"><a href="?show' . $section . '=' . (isset($_REQUEST['show'.$section])?!$_REQUEST['show'.$section]:true) . '">' . $title . '</a>: ' . ((($type&TYPE_ENTIRE)==0)?'</span>':'') . $line . ((($type&TYPE_ENTIRE)>0)?'</span>':'') . "<br />\n";
-					}
-					else
-					{
-						print '<span style="' . ((($type&TYPE_BOLD)>0)?'font-weight:bold;':'') . 'color:rgb(' . ((($type&TYPE_R)>0)?'255,':'0,') . ((($type&TYPE_G)>0)?'255,':'0,') . ((($type&TYPE_B)>0)?'255':'0') . ');">' . $title . ': ' . ((($type&TYPE_ENTIRE)==0)?'</span>':'') . $line . ((($type&TYPE_ENTIRE)>0)?'</span>':'') . "<br />\n";
-					}
-				}
-			}
-		}
+		header('Content-Type: ' . getMime($GLOBALS['templates']['TEMPLATE_REPORTS']));
+		$GLOBALS['smarty']->display($GLOBALS['templates']['TEMPLATE_REPORTS']);
 	}
-	?>
-</body>
-</html>
+}
+
+?>
